fix visibility desktop

--- a/client/src/components/layout/navbar/NavMenu.module.scss
+++ b/client/src/components/layout/navbar/NavMenu.module.scss
@@ -43,6 +43,7 @@
 
 @include mq('custom600') {
   .menu {
+    visibility: visible;
     position: relative;
     opacity: 1;
 
